# RedRun

./: .gitignore  PUBLISHING.md  README.md  index.html  pyproject.toml
examples/: sample_log.txt
redrun/: __init__.py  __main__.py  _entrypoint.py
redrun/classify/: categories.py  classifier.py
redrun/cli/: __init__.py  __main__.py  main.py
redrun/extract/: extractor.py
redrun/ingest/: normalizer.py  reader.py
redrun/ingest/sources/:  __init__.py  file.py  source.py  stdin.py
redrun/output/: console.py
tests/: test_commands.txt  test_extract_extractor.py  test_ingest_normalizer.py  test_ingest_reader.py
